--- a/Pinstagram/appsettings.json
+++ b/Pinstagram/appsettings.json
@@ -1,14 +1,17 @@
 {
+  "AppSettings": {
+    "Secret": "this is a very secret key value"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Pinstagram-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Pinstagram;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "IdentityServer": {
     "Clients": {
       "Pinstagram": {
@@ -16,5 +19,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
